Mojibake after forwarding message with defective charset
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(thunderbird_esr102 wontfix)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr102 | --- | wontfix |
People
(Reporter: rachel, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
The attached message is encoded in windows-1250 (central European) and is missing the charset information from the headers. It is displayed correctly, answering also works. Forward or "Edit as new message" (same code path, different to "reply") shows Mojibake, that is UTF-8 replacement characters <?>. It would be desirable to handle that better. In TB 78 it was handled better, however, TB 78 also didn't display the message correctly, instead it displayed some Cyrillic characters.
| Reporter | ||
Comment 1•4 years ago
|
||
Alice, could you see where the behaviour changed here. STR:
Import the message into a local folder (drag and drop). Forward.
What you get in TB 78 is different to TB 91. When did that change?
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Comment 2•4 years ago
|
||
Sorry, "It is displayed correctly" is not true for TB 91, there the <?> are also displayed. It is only displayed correctly with the patch from bug 1734361 which corrects the regression mentioned in bug 1734361 comment #13.
Comment 3•4 years ago
|
||
(In reply to Rachel Martin from comment #2)
Sorry, "It is displayed correctly" is not true for TB 91, there the <?> are also displayed. It is only displayed correctly with the patch from bug 1734361 which corrects the regression mentioned in bug 1734361 comment #13.
So what should I do?
| Reporter | ||
Comment 4•4 years ago
|
||
So what should I do?
Please find the change of behaviour when forwarding, STR in comment #1. Compare TB 78 to TB 91 to see what the difference. Maybe it's the same as in bug 1734361 comment #9.
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Regression window:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=ea8e92388dfe64465640b7ee7e471083cf9bcfe2&tochange=a5ec7d54dd63c8c9d1e8ba34e32d5090eb8754a6
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e581b02b5df54c1cdf194316dba74a5cf65145b6&tochange=68867f327c6267f971e6483443148a4025f94633
| Reporter | ||
Comment 6•4 years ago
|
||
Thanks Alice, much appreciated, very helpful. In general, knowing where the regression came from frequently allows finding a solution quicker.
| Assignee | ||
Updated•4 years ago
|
| Reporter | ||
Comment 7•4 years ago
|
||
To test this, import the attached message, view it (displays fine), then forward it.
| Assignee | ||
Comment 9•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Comment 10•3 years ago
|
||
Comment on attachment 9331204 [details] [diff] [review]
1737245-forward-charset-detect.patch
Looks good, I folded it the patch to test that case in phabricator.
Comment 11•3 years ago
|
||
Thanks for adding the test. The non-test part is based on https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1737245-forward-charset-detect.patch, the 91 version was different.
Comment 12•3 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/7784caaf3422
Add charset detection also for the 'forward/edit as new' codepath. r=leftmostcat
| Assignee | ||
Updated•3 years ago
|
Description
•