Bug 1737245 - Add charset detection also for the 'forward/edit as new' codepath. r=leftmostcat

Non-test code based on https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1737245-forward-charset-detect.patch

Differential Revision: https://phabricator.services.mozilla.com/D177953

--HG--
extra : rebase_source : d9b19280d1547680acc53261a9e3a05c35583f64